# rocket-rest-api

./: Cargo.toml  README.md  Rocket.toml  db.sqlite
migrations/2024-02-22-145757_create_students/: up.sql
src/: authorization.rs  controller.rs  database.rs  main.rs  model.rs  repo.rs  schema.rs
